# recowork

./: .gitignore  README.md
agent-core/: .env.example  package-lock.json  package.json  tsconfig.json
agent-core/fixtures/: 01-read-and-summarize.json  02-edit-and-verify.json  03-multi-step-shell.json  04-glob-and-grep.json
agent-core/src/: agent.ts  cli.ts  fixtures-runner.ts  logger.ts  sidecar.ts
agent-core/src/inference/: config.ts
agent-core/src/prompts/: overrides.ts
desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
desktop/scripts/: build-sidecar.mjs  make-app-icon.mjs  make-placeholder-icons.mjs
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ApprovalModal.tsx  Chat.tsx  Composer.tsx  MCPServers.tsx  Settings.tsx  Sidebar.tsx  Stats.tsx  Tools.tsx
desktop/src/lib/: mcps.ts  pricing.ts  sessions.ts  sidecar.ts  store.ts  titles.ts  usage.ts
sandbox/: .dockerignore  Dockerfile
sandbox/scripts/: build-image.sh
